--- a/angular.json
+++ b/angular.json
@@ -31,8 +31,15 @@
                 "output": "./svg"
               }
             ],
-            "styles": ["src/theme/variables.scss", "src/global.scss"],
-            "scripts": [],
+            "styles": ["src/theme/variables.scss", 
+              "src/global.scss",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css"  
+            ],
+            "scripts": [
+              "./node_modules/jquery/dist/jquery.min.js",  
+              "./node_modules/popper.js/dist/umd/popper.min.js",  
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js"  
+            ],
             "aot": false,
             "vendorChunk": true,
             "extractLicenses": false,
