--- a/package.json
+++ b/package.json
@@ -27,7 +27,13 @@
     "@capacitor/keyboard": "1.2.1",
     "@capacitor/status-bar": "1.0.7",
     "@ionic/angular": "^6.0.0",
+    "bootstrap": "^4.6.0",
+    "jquery": "^3.6.0",
+    "lottie-web": "^5.8.1",
+    "ngx-lottie": "^8.0.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
+    "swiper": "^7.4.1",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
